# acidnes

./: .gitignore  CMakeLists.txt  Justfile
.github/workflows/: tests.yml
doc/: 6502_cpu.txt  links.txt  nestech.txt
src/: cartridge.c  cartridge.h  common.c  common.h  config.h  cpu.c  cpu.h  main.c  mapper.c  mapper.h  opcodes.c  opcodes.h  ppu.c  ppu.h  types.h
tests/: main.c  nestest-output.txt  nestest.sh
utils/: nes_info.py
